--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battleship Game</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Aquí irá el contenido de tu juego -->
 
+    <button id="startGameButton">Start Game</button>
+    
+    <div class="container" id="gameContainer" style="display: none;">
+
+        <section class="board" id="player-board">
+            <h2>Tablero del Jugador</h2>
+            <div class="grid">
+                <!-- Aquí puedes agregar las celdas del tablero, por ejemplo, usando un bucle en JavaScript -->
+            </div>
+        </section>
+
+        <!-- Tablero de la Máquina -->
+        <section class="board" id="machine-board">
+            <h2>Tablero de la Máquina</h2>
+            <div class="grid">
+                <!-- Aquí puedes agregar las celdas del tablero, por ejemplo, usando un bucle en JavaScript -->
+            </div>
+        </section>
+    </div>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
-
