Boards position set

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<div id="mainContainer">
     <button id="startGameButton">Start Game</button>
-    
+
     <div class="container" id="gameContainer" style="display: none;">
 
         <section class="board" id="player-board">
@@ -27,7 +27,7 @@
             </div>
         </section>
     </div>
-
+</div>
     <script src="js/main.js"></script>
 </body>
 </html>
