--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container" id="gameContainer" style="display: none;">
 
         <section class="board" id="player-board">
-            <h2>Tablero del Jugador</h2>
+            <h2>Player</h2>
             <div class="grid">
                 <!-- Aquí puedes agregar las celdas del tablero, por ejemplo, usando un bucle en JavaScript -->
             </div>
@@ -21,7 +21,7 @@
 
         <!-- Tablero de la Máquina -->
         <section class="board" id="machine-board">
-            <h2>Tablero de la Máquina</h2>
+            <h2>Computer</h2>
             <div class="grid">
                 <!-- Aquí puedes agregar las celdas del tablero, por ejemplo, usando un bucle en JavaScript -->
             </div>
