--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </section>
 
         <!-- Tablero de la Máquina -->
-        <section class="board" id="machine-board">
+        <section class="board" id="computer-board">
             <h2>Computer</h2>
             <div class="grid">
                 <!-- Aquí puedes agregar las celdas del tablero, por ejemplo, usando un bucle en JavaScript -->
