several modules added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="container" id="gameContainer" style="display: none;">
 
-        <section class="board" id="player-board">
+        <section class="board" id="human-board">
             <h2>Player</h2>
             <div class="grid">
                 <!-- Aquí puedes agregar las celdas del tablero, por ejemplo, usando un bucle en JavaScript -->
