boards displayed correctly

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div id="mainContainer">
     <button id="startGameButton">Start Game</button>
 
-    <div class="container" id="gameContainer" style="display: none;">
+    <div id="gameContainer" style="display: none;">
 
         <section class="board" id="human-board">
             <h2>Player</h2>
