--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="mainPage">
         <h1 class="title">Battleship Game</h1>
-        <button class="startGameButton">START GAME</button>
+        <button class="startButton">START GAME</button>
     </div>
 </body>
 </html>
