Code polished and design improved

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     <title>Battleship Game</title>
 </head>
 <body>
     <div class="mainPage">
+        <img class="shipIcon" src="ship.svg" alt="Ship Icon" style="height: 50px; width: auto;"/> 
         <h1 class="title">Battleship Game</h1>
         <button class="startButton">START GAME</button>
+        <P class="copyright">© 2023 by Alex Arroyo</P>
     </div>
     
 </body>
