--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <img class="shipIcon" src="ship.svg" alt="Ship Icon" style="height: 50px; width: auto;"/> 
         <h1 class="title">Battleship Game</h1>
         <button class="startButton">START GAME</button>
-        <P class="copyright">© 2023 by Alex Arroyo</P>
+        <P class="copyright">© 2023-2024 by Alex Arroyo</P>
     </div>
     
 </body>
